[gd_scene load_steps=18 format=3 uid="uid://doecdr1rk3fe7"]

[ext_resource type="Script" uid="uid://chhqaxh1tkhqn" path="res://scenes/towers/red_missile_tower.gd" id="1_gaure"]
[ext_resource type="Texture2D" uid="uid://b3s6ybgr3injr" path="res://assets/towerDefense_tile250.png" id="2_4nkus"]
[ext_resource type="Script" uid="uid://glnxqb54cknv" path="res://scenes/towers/collision_shape_2d.gd" id="3_xvqjc"]
[ext_resource type="Texture2D" uid="uid://c2ymecpj0mmkq" path="res://assets/towerDefense_tile110.png" id="4_3pu1g"]
[ext_resource type="Script" uid="uid://cihlmefhp6a13" path="res://scenes/towers/progress_bar.gd" id="4_67vox"]
[ext_resource type="Texture2D" uid="uid://cyvxcb2vvdwe3" path="res://assets/towerDefense_tile297.png" id="5_fssab"]
[ext_resource type="Texture2D" uid="uid://cphe22jcw8urh" path="res://assets/towerDefense_tile296.png" id="6_u2xm8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o8yj5"]
radius = 47.5
height = 141.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wnuyo"]
radius = 345.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkyy5"]
bg_color = Color(1, 0.156863, 0, 1)
corner_radius_top_left = 350
corner_radius_top_right = 350
corner_radius_bottom_right = 350
corner_radius_bottom_left = 350
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nursn"]
bg_color = Color(0.0862745, 0.164706, 0.258824, 0.690196)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ft2fv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bpx0"]
bg_color = Color(0.523404, 0.599958, 0.763405, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwv75"]
bg_color = Color(0.952876, 0.391416, 0.38053, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gskru"]
bg_color = Color(0.316047, 0.626872, 0.880133, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diid0"]
bg_color = Color(1, 0.272673, 0.0764765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gme8k"]
bg_color = Color(0.309804, 0.65098, 0.847059, 0.992157)

[node name="RedMissileTower" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_gaure")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o8yj5")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(66, 0)

[node name="TowerDefenseTile250" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("2_4nkus")

[node name="Tower" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_wnuyo")
script = ExtResource("3_xvqjc")

[node name="BulletContainer" type="Node" parent="."]

[node name="Area" type="Panel" parent="."]
visible = false
modulate = Color(0, 0.788235, 0.764706, 0.254902)
offset_left = -345.0
offset_top = -345.0
offset_right = 345.0
offset_bottom = 345.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fkyy5")

[node name="Upgrade" type="Node" parent="."]

[node name="Upgrade" type="Panel" parent="Upgrade"]
offset_left = -572.0
offset_top = 81.0
offset_right = 4.0
offset_bottom = 273.0
scale = Vector2(2, 2)
theme_override_styles/panel = SubResource("StyleBoxFlat_nursn")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrade/Upgrade"]
layout_mode = 0
offset_top = 28.0
offset_right = 569.0
offset_bottom = 153.0
theme_override_constants/separation = 45
alignment = 1

[node name="Range" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ft2fv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8bpx0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jwv75")
theme_override_styles/normal = SubResource("StyleBoxFlat_gskru")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/Range"]
layout_mode = 0
offset_left = 39.0
offset_top = 125.0
offset_right = 87.0
offset_bottom = 148.0
text = "Range"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Upgrade/Upgrade/HBoxContainer/Range"]
position = Vector2(62.5, 62.5)
texture = ExtResource("4_3pu1g")

[node name="AttackSpeed" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ft2fv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8bpx0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jwv75")
theme_override_styles/normal = SubResource("StyleBoxFlat_gskru")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/AttackSpeed"]
layout_mode = 0
offset_left = 24.0
offset_top = 130.0
offset_right = 102.0
offset_bottom = 153.0
text = "Atk Speed"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Upgrade/Upgrade/HBoxContainer/AttackSpeed"]
position = Vector2(63, 63)
texture = ExtResource("5_fssab")

[node name="Power" type="Button" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ft2fv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8bpx0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jwv75")
theme_override_styles/normal = SubResource("StyleBoxFlat_gskru")

[node name="Label" type="Label" parent="Upgrade/Upgrade/HBoxContainer/Power"]
layout_mode = 0
offset_left = 31.0
offset_top = 127.0
offset_right = 109.0
offset_bottom = 150.0
text = "power"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Upgrade/Upgrade/HBoxContainer/Power"]
position = Vector2(62, 61)
texture = ExtResource("6_u2xm8")

[node name="ProgressBar" type="ProgressBar" parent="Upgrade"]
offset_left = -55.0
offset_top = -92.0
offset_right = 59.0
offset_bottom = -69.0
theme_override_styles/background = SubResource("StyleBoxFlat_diid0")
theme_override_styles/fill = SubResource("StyleBoxFlat_gme8k")
script = ExtResource("4_67vox")

[node name="Timer" type="Timer" parent="Upgrade/ProgressBar"]
wait_time = 0.5

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
[connection signal="mouse_entered" from="Upgrade/Upgrade/HBoxContainer/Range" to="." method="_on_range_mouse_entered"]
[connection signal="mouse_exited" from="Upgrade/Upgrade/HBoxContainer/Range" to="." method="_on_range_mouse_exited"]
[connection signal="pressed" from="Upgrade/Upgrade/HBoxContainer/Range" to="." method="_on_range_pressed"]
[connection signal="pressed" from="Upgrade/Upgrade/HBoxContainer/AttackSpeed" to="." method="_on_attack_speed_pressed"]
[connection signal="pressed" from="Upgrade/Upgrade/HBoxContainer/Power" to="." method="_on_power_pressed"]
[connection signal="timeout" from="Upgrade/ProgressBar/Timer" to="." method="_on_timer_timeout"]
